--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,8 @@ dependencies {
     implementation project(path: ':chat-sdk-firebase-file-storage')
     implementation project(path: ':chat-sdk-firebase-ui')
     implementation project(path: ':chat-sdk-profile-pictures')
+
+    debugImplementation 'com.facebook.flipper:flipper:0.12.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
